--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -5,20 +5,22 @@
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/login_bg"
         android:padding="@dimen/_40sdp"
+        android:background="@android:color/white"
         >
 
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView27"
             android:layout_marginTop="@dimen/_20sdp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="@string/thank_you"
-            android:textColor="@color/colorYellow"
+            android:gravity="center"
+            android:textColor="@color/color_deep_gold"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold"
+            android:padding="@dimen/_2sdp"
             app:layout_constraintBottom_toTopOf="@+id/textView28"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +34,10 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/montserrat"
             android:text="@string/upload_picture"
-            android:textColor="@color/colorSemiWhite"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
+            android:gravity="center"
+            android:padding="@dimen/_2sdp"
             app:layout_constraintBottom_toTopOf="@+id/imgProfilePhoto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,12 +50,14 @@
             android:layout_height="@dimen/_75sdp"
             android:background="@drawable/ic_user"
             app:civ_border_width="0dp"
-            app:civ_background_color="@android:color/transparent"
-            app:civ_border_color="@android:color/transparent"
+            app:civ_background_color="@android:color/white"
+            app:civ_border_color="@android:color/white"
+            app:civ_shadow="false"
             android:layout_marginTop="@dimen/_20sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView28"
+            app:layout_constraintBottom_toTopOf="@+id/etName"
 
             />
 
@@ -60,16 +66,18 @@
             android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:background="@drawable/bg_black_view"
+            android:background="@drawable/et_bg_white_border_black"
             android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_name"
             android:maxLines="1"
-            android:layout_marginTop="@dimen/_25sdp"
+            android:textIsSelectable="false"
+            android:longClickable="false"
+            android:layout_marginTop="@dimen/_20sdp"
             android:inputType="textCapWords"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/colorSemiWhite"
-            android:textColorHint="@color/colorSemiWhite"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toTopOf="@+id/etOTP"
             app:layout_constraintEnd_toEndOf="parent"
@@ -80,17 +88,17 @@
             android:id="@+id/etOTP"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:background="@drawable/bg_black_view"
+            android:background="@drawable/et_bg_white_border_black"
             android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_otp"
             android:maxLines="1"
             android:maxLength="6"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:inputType="numberSigned"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/colorSemiWhite"
-            android:textColorHint="@color/colorSemiWhite"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
             app:layout_constraintEnd_toEndOf="parent"
