--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="colorLightBlack">#d9d9d9</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
-    <color name="colorYellow">#f3bb25</color>
+    <color name="colorYellow">#f2b50d</color>
     <color name="colorRed">#ef3434</color>
     <color name="colorRedLight">#e0706c</color>
     <color name="semi_white">#FEFFFF</color>
