--- a/app/src/main/res/layout/content_registration_step_three.xml
+++ b/app/src/main/res/layout/content_registration_step_three.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/thank_you"
-        android:textColor="@color/colorYellow"
+        android:textColor="@color/color_deep_gold"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         android:fontFamily="@font/montserrat"
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/upload_id_picture"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_11sdp"
         android:textColor="@color/colorTextBlackLight"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
