--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -4,32 +4,32 @@
     android:layout_height="match_parent"
     android:padding="@dimen/_40sdp"
     android:id="@+id/ll_root"
-    android:background="@drawable/login_bg"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="100dp"
+        android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView26"
         app:srcCompat="@drawable/lpesa_logo" />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/textView26"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_50sdp"
-        android:shadowColor="#000000"
-        android:shadowDx="2.7"
-        android:shadowDy="2.7"
-        android:shadowRadius="1"
-        android:text="@string/sign_up"
-        android:textColor="@color/colorYellow"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:gravity="center"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/color_deep_gold"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
+        android:padding="@dimen/_2sdp"
+        android:text="@string/sign_up"
+        app:layout_constraintBottom_toTopOf="@+id/ll_flag_section"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView15" />
@@ -37,11 +37,11 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/ll_flag_section"
         android:layout_width="0dp"
+        android:background="@drawable/et_bg_white_border_black"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/bg_black_view"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingStart="@dimen/_1sdp"
+        android:paddingEnd="@dimen/_1sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,19 +53,19 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
+            android:paddingStart="@dimen/_15sdp"
+            android:paddingEnd="@dimen/_2sdp"
             android:cursorVisible="true"
             android:focusable="true"
-            android:fontFamily="@font/montserrat"
             android:hint="@string/phone_no"
             android:inputType="numberSigned"
             android:maxLines="1"
             android:maxLength="15"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:textColor="@color/colorSemiWhite"
-            android:textColorHint="@color/colorSemiWhite"
-            android:textCursorDrawable="@null"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
+            android:textCursorDrawable="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_1"
@@ -74,12 +74,16 @@
         <ImageView
             android:id="@+id/img_country"
             android:contentDescription="@string/app_name"
-            android:layout_width="@dimen/_18sdp"
-            android:layout_height="@dimen/_18sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:paddingStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/dropdown"
+            app:layout_constraintEnd_toStartOf="@+id/dropdown"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+
             />
 
         <ImageView
@@ -99,8 +103,8 @@
             android:id="@+id/view_1"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:background="@color/semi_white"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:background="@color/colorTextBlack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/etPhone"
             app:layout_constraintStart_toEndOf="@+id/dropdown"
@@ -112,34 +116,53 @@
         android:id="@+id/llEmail"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:background="@drawable/bg_black_view"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:paddingStart="@dimen/_1sdp"
+        android:paddingEnd="@dimen/_1sdp"
+        android:background="@drawable/et_bg_white_border_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_flag_section">
+        app:layout_constraintTop_toBottomOf="@+id/ll_flag_section"
+        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
+        >
 
         <ImageView
-            android:id="@+id/img_password"
+            android:id="@+id/img_email"
             android:contentDescription="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:paddingStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/view16"
+            app:layout_constraintEnd_toStartOf="@+id/dropdownTwo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_mail_icon" />
+
+        <ImageView
+            android:id="@+id/dropdownTwo"
+            android:contentDescription="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:background="@drawable/ic_dropdown_icon"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/view16"
+            app:layout_constraintStart_toEndOf="@+id/img_email"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view16"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_24sdp"
-            android:background="@color/semi_white"
+            android:background="@color/colorTextBlack"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/etEmail"
-            app:layout_constraintStart_toEndOf="@+id/img_password"
+            app:layout_constraintEnd_toStartOf="@+id/etEmail"
+            app:layout_constraintStart_toEndOf="@+id/dropdownTwo"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
@@ -149,17 +172,17 @@
             android:background="@android:color/transparent"
             android:cursorVisible="true"
             android:focusable="true"
-            android:fontFamily="@font/montserrat"
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:maxLength="35"
-            android:paddingStart="@dimen/_10sdp"
+            android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_10sdp"
-            android:textColor="@color/colorSemiWhite"
-            android:textColorHint="@color/colorSemiWhite"
-            android:textCursorDrawable="@null"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
+            android:textCursorDrawable="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view16"
@@ -169,10 +192,10 @@
     </android.support.constraint.ConstraintLayout>
 
     <com.app.l_pesa.common.CustomButtonRegular
-        android:id="@+id/txtQualify"
+        android:id="@+id/btnSubmit"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:textStyle="bold"
         android:background="@drawable/yellow_button"
         android:text="@string/see_you_quality"
