--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -53,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:paddingStart="@dimen/_15sdp"
+            android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:cursorVisible="true"
             android:focusable="true"
@@ -75,7 +75,7 @@
             android:id="@+id/img_country"
             android:contentDescription="@string/app_name"
             android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+            android:layout_height="@dimen/_18sdp"
             android:paddingStart="@dimen/_3sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_1sdp"
@@ -103,8 +103,8 @@
             android:id="@+id/view_1"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_24sdp"
-            android:background="@color/colorTextBlack"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:background="@color/color_gray_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/etPhone"
             app:layout_constraintStart_toEndOf="@+id/dropdown"
@@ -132,37 +132,24 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:paddingStart="@dimen/_3sdp"
-            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/dropdownTwo"
+            app:layout_constraintEnd_toStartOf="@+id/view16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_mail_icon" />
 
-        <ImageView
-            android:id="@+id/dropdownTwo"
-            android:contentDescription="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:background="@drawable/ic_dropdown_icon"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/view16"
-            app:layout_constraintStart_toEndOf="@+id/img_email"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view16"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_24sdp"
-            android:background="@color/colorTextBlack"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:background="@color/color_gray_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/etEmail"
-            app:layout_constraintStart_toEndOf="@+id/dropdownTwo"
+            app:layout_constraintStart_toEndOf="@+id/img_email"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
@@ -176,7 +163,7 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:maxLength="35"
-            android:paddingStart="@dimen/_15sdp"
+            android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorBlack"
@@ -197,9 +184,10 @@
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="@dimen/_25sdp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat"
         android:background="@drawable/yellow_button"
         android:text="@string/see_you_quality"
-        android:textColor="@color/semi_white"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llEmail" />
