--- a/app/src/main/res/drawable/ic_dropdown_icon.xml
+++ b/app/src/main/res/drawable/ic_dropdown_icon.xml
@@ -1,5 +1,5 @@
 <vector android:autoMirrored="true" android:height="12dp"
     android:viewportHeight="48" android:viewportWidth="48"
     android:width="12dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M5.94,15l35.44,0l-17.38,22.81z"/>
+    <path android:fillColor="#999999" android:pathData="M5.94,15l35.44,0l-17.38,22.81z"/>
 </vector>
