--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:id="@+id/ll_root"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
     android:padding="@dimen/_40sdp">
 
     <ImageView
@@ -12,7 +11,7 @@
         android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,19 +20,22 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/ll_flag_section"
         android:layout_width="0dp"
+        android:background="@drawable/et_bg_white_border_black"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_40sdp"
-        android:background="@drawable/bg_black_view"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingStart="@dimen/_1sdp"
+        android:paddingEnd="@dimen/_1sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <ImageView
             android:id="@+id/img_country"
-            android:layout_width="@dimen/_18sdp"
+            android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_18sdp"
+            android:paddingStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_1sdp"
             android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView33"
@@ -46,7 +48,7 @@
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_10sdp"
-            android:background="@color/semi_white"
+            android:background="@color/color_gray_light"
             app:layout_constraintEnd_toStartOf="@+id/etPhone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView33"
@@ -57,18 +59,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:fontFamily="@font/montserrat"
             android:inputType="numberSigned"
             android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:textColor="@color/colorSemiWhite"
+            android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/phone_no"
             android:cursorVisible="true"
-            android:textCursorDrawable="@null"
             android:focusable="true"
             android:maxLines="1"
             android:maxLength="15"
-            android:textColorHint="@color/colorSemiWhite"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
+            android:textCursorDrawable="@null"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,51 +98,45 @@
         android:id="@+id/txtLogin"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:background="@drawable/yellow_button"
         android:fontFamily="@font/montserrat"
         android:text="@string/login"
-        android:textColor="@color/semi_white"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtForgotPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_flag_section" />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtForgotPassword"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:text="@string/forgot_password"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorAquaDeep"
+        android:textColor="@color/colorSemiBlack"
+        app:layout_constraintBottom_toTopOf="@+id/txtRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
 
     <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dont_have_account"
-        android:textColor="@color/semi_white"
-        android:fontFamily="@font/montserrat"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
-        app:layout_constraintEnd_toStartOf="@+id/txtRegister"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />
-
-    <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:text="@string/create_one"
+        android:gravity="center"
+        android:textColorHighlight="@android:color/white"
+        android:textColorLink="@color/colorAppDeep"
+        android:text="@string/create_account"
+        android:textColor="@color/colorSemiBlack"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/color_aqua"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />
 
     <ProgressBar
@@ -148,13 +144,13 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="@dimen/_32sdp"
         android:layout_height="@dimen/_32sdp"
-        android:indeterminateTint="@color/colorWhite"
+        android:indeterminateTint="@color/colorRed"
         android:padding="@dimen/_2sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txtRegister" />
 
 
 </android.support.constraint.ConstraintLayout>
